--- a/index.html
+++ b/index.html
@@ -26,5 +26,44 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <div class="container">
+      <!-- output container -->
+      <div class="cal-output">
+        <span>0</span>
+      </div>
+      <!-- input container -->
+      <div class="cal-btn">
+        <div class="row row-one">
+          <button>AC</button>
+          <button>DE</button>
+          <button>%</button>
+          <button>/</button>
+        </div>
+        <div class="row row-two">
+          <button>7</button>
+          <button>8</button>
+          <button>9</button>
+          <button>X</button>
+        </div>
+        <div class="row row-three">
+          <button>4</button>
+          <button>5</button>
+          <button>6</button>
+          <button>-</button>
+        </div>
+        <div class="row row-four">
+          <button>1</button>
+          <button>2</button>
+          <button>3</button>
+          <button>+</button>
+        </div>
+        <div class="row row-five">
+          <button>00</button>
+          <button>0</button>
+          <button>.</button>
+          <button>=</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
