html,css - completed

--- a/index.html
+++ b/index.html
@@ -34,34 +34,34 @@
       <!-- input container -->
       <div class="cal-btn">
         <div class="row row-one">
-          <button>AC</button>
-          <button>DE</button>
-          <button>%</button>
-          <button>/</button>
+          <button class="btn-clear">AC</button>
+          <button class="btn-clear">DE</button>
+          <button class="operator">%</button>
+          <button class="operator">/</button>
         </div>
         <div class="row row-two">
           <button>7</button>
           <button>8</button>
           <button>9</button>
-          <button>X</button>
+          <button class="operator">X</button>
         </div>
         <div class="row row-three">
           <button>4</button>
           <button>5</button>
           <button>6</button>
-          <button>-</button>
+          <button class="operator">-</button>
         </div>
         <div class="row row-four">
           <button>1</button>
           <button>2</button>
           <button>3</button>
-          <button>+</button>
+          <button class="operator">+</button>
         </div>
         <div class="row row-five">
           <button>00</button>
           <button>0</button>
           <button>.</button>
-          <button>=</button>
+          <button class="operator">=</button>
         </div>
       </div>
     </div>
