--- a/index.html
+++ b/index.html
@@ -1,71 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="shortcut icon"
-      href="./assets/images/calculator-favicon.svg"
-      type="image/x-icon"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Calculator</title>
+  <link rel="shortcut icon" href="./assets/images/calculator-favicon.svg" type="image/x-icon" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+  <title>Calculator</title>
 
-    <link rel="stylesheet" href="./styles/normalize.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="./styles/style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <!-- output container -->
-      <div class="cal-output">
-        <span>0</span>
+  <link rel="stylesheet" href="./styles/normalize.css" />
+
+  <link rel="stylesheet" href="./styles/style.css" />
+</head>
+
+<body>
+  <div class="container">
+    <!-- output container -->
+    <div class="cal-output">
+      <span>0</span>
+    </div>
+    <!-- input container -->
+    <div class="cal-btn">
+      <div class="row row-one">
+        <button class="btn-clear">AC</button>
+        <button class="btn-clear">DE</button>
+        <button class="operator">%</button>
+        <button class="operator">/</button>
       </div>
-      <!-- input container -->
-      <div class="cal-btn">
-        <div class="row row-one">
-          <button class="btn-clear">AC</button>
-          <button class="btn-clear">DE</button>
-          <button class="operator">%</button>
-          <button class="operator">/</button>
-        </div>
-        <div class="row row-two">
-          <button>7</button>
-          <button>8</button>
-          <button>9</button>
-          <button class="operator">X</button>
-        </div>
-        <div class="row row-three">
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
-          <button class="operator">-</button>
-        </div>
-        <div class="row row-four">
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button class="operator">+</button>
-        </div>
-        <div class="row row-five">
-          <button>00</button>
-          <button>0</button>
-          <button>.</button>
-          <button class="operator">=</button>
-        </div>
+      <div class="row row-two">
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button class="operator">×</button>
+      </div>
+      <div class="row row-three">
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button class="operator">-</button>
+      </div>
+      <div class="row row-four">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button class="operator">+</button>
+      </div>
+      <div class="row row-five">
+        <button>00</button>
+        <button>0</button>
+        <button>.</button>
+        <button class="operator">=</button>
       </div>
     </div>
+  </div>
 
-    <script src="./script.js"></script>
-  </body>
+  <script src="./script.js"></script>
+</body>
+
 </html>
